# expose-shared-library

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/mixed-rust-lua-project/: Cargo.toml  build.rs
examples/mixed-rust-lua-project/lua/: main.lua
examples/mixed-rust-lua-project/src/: lib.rs
examples/mixed-rust-python-project/: Cargo.toml  README.md  build.rs  check.sh
examples/mixed-rust-python-project/python/: main.py
examples/mixed-rust-python-project/src/: lib.rs
src/: expose_shared_library.rs  lib.rs
