[package]
name = "sum_as_string_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "sum_as_string_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }

[build-dependencies]
pyo3-build-config = "0.22.4"
expose-shared-library = { path = "../..", features = ["py"] }
